# Owo-wm

./: .gitignore  CMakeLists.txt  flake.nix
cmake/: WaylandScannerHelpers.cmake
nix/: default.nix
src/: CMakeLists.txt  main.cpp  qboxcursor.cpp  qboxcursor.h  qboxdecoration.cpp  qboxdecoration.h  qboxlayershell.cpp  qboxlayershell.h  qboxoutput.cpp  qboxoutput.h  qboxseat.cpp  qboxseat.h  qboxserver.cpp  qboxserver.h  qboxxdgshell.cpp  qboxxdgshell.h
